# MobulaOP

./: README.md
examples/: MyFirstOP.py  ROIAlignOP_GPU.py
mobula_op/: CMakeLists.txt  cp_cpp2cu.py  func.py  test_utils.py
mobula_op/inc/: func.h  im2col.h  linalg.h
mobula_op/inc/context/: context.h
mobula_op/inc/op/: roi_align.h  softmax.h
tests/: test_test_utils.py
